--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,7 +2,7 @@
  * Wrangler config for the Cloudflare Durable Object template
  * STRICTLY DO NOT MODIFY THIS FILE - Hidden from AI to prevent breaking core functionality
  */
- {
+{
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "status-page-dashboard",
 	"main": "worker/index.ts",
@@ -14,20 +14,23 @@
 	"observability": {
 		"enabled": true
 	},
-    "durable_objects": {
-      "bindings": [
-        {
-          "name": "GlobalDurableObject",
-          "class_name": "GlobalDurableObject"
-        }
-      ]
-    },
-    "migrations": [
-      {
-        "tag": "v1",
-        "new_sqlite_classes": [
-          "GlobalDurableObject"
-        ]
-      }
-    ]
+	"durable_objects": {
+		"bindings": [
+			{
+				"name": "GlobalDurableObject",
+				"class_name": "GlobalDurableObject"
+			}
+		]
+	},
+	"migrations": [
+		{
+			"tag": "v1",
+			"new_sqlite_classes": [
+				"GlobalDurableObject"
+			]
+		}
+	],
+	"vars": {
+		"ENABLE_MANAGEMENT": "false"
+	}
 }
