--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 	],
 	"compilerOptions": {
 		"incremental": true,
+		"lib": ["ES2022", "WebWorker"],
 		"types": [
 			"@cloudflare/workers-types"
 		],
