--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v1-aegis-outage-dashboa-2cecf578-6d3c-4ae6-aff0-0571f33d7360",
+  "name": "status-page-dashboard",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
