--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,39 +2,32 @@
  * Wrangler config for the Cloudflare Durable Object template
  * STRICTLY DO NOT MODIFY THIS FILE - Hidden from AI to prevent breaking core functionality
  */
-{
-  "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "status-page-dashboard",
-  "main": "worker/index.ts",
-  "compatibility_date": "2025-04-24",
-  "assets": {
-    "directory": "dist",
-
-    // your existing settings
-    "not_found_handling": "single-page-application",
-    "run_worker_first": ["/api/*", "!/api/docs/*"]
-  },
-  "observability": {
-    "enabled": true
-  },
-  "durable_objects": {
-    "bindings": [
+ {
+	"$schema": "node_modules/wrangler/config-schema.json",
+	"name": "status-page-dashboard",
+	"main": "worker/index.ts",
+	"compatibility_date": "2025-04-24",
+	"assets": {
+		"not_found_handling": "single-page-application",
+		"run_worker_first": ["/api/*", "!/api/docs/*"]
+	},
+	"observability": {
+		"enabled": true
+	},
+    "durable_objects": {
+      "bindings": [
+        {
+          "name": "GlobalDurableObject",
+          "class_name": "GlobalDurableObject"
+        }
+      ]
+    },
+    "migrations": [
       {
-        "name": "GlobalDurableObject",
-        "class_name": "GlobalDurableObject"
+        "tag": "v1",
+        "new_sqlite_classes": [
+          "GlobalDurableObject"
+        ]
       }
     ]
-  },
-  "migrations": [
-    {
-      "tag": "v1",
-      "new_sqlite_classes": ["GlobalDurableObject"]
-    }
-  ],
-  "kv_namespaces": [
-    {
-      "binding": "KV",
-      "id": "29dacc8ed80d46c29074d97a1c3ad2fc"
-    }
-  ]
 }
